feat: add certificate pdf verification and remove stripe
